[gd_scene load_steps=33 format=3 uid="uid://b6ggjxwu3ebra"]

[ext_resource type="Script" path="res://Scenes/gui.gd" id="1_5w5l0"]
[ext_resource type="Texture2D" uid="uid://brmo41u4b8fdm" path="res://Images/Pieces/Ruby_Circle.png" id="2_x5vtr"]
[ext_resource type="Texture2D" uid="uid://dcsai3m18t5jm" path="res://Images/Pieces/Pearl_Circle.png" id="3_dde0g"]
[ext_resource type="Texture2D" uid="uid://vbumb1jpy4pt" path="res://Images/Pieces/Ruby_Circle-toggle.png" id="3_ovmf0"]
[ext_resource type="Texture2D" uid="uid://b2popagxjo37w" path="res://Images/Pieces/Amber_Circle.png" id="4_i42jv"]
[ext_resource type="Texture2D" uid="uid://b30q7mptwdccs" path="res://Images/Pieces/Jade_Circle.png" id="5_6lco6"]
[ext_resource type="Texture2D" uid="uid://c4a8608y1jmbg" path="res://Images/Pieces/Pearl_Circle-toggle.png" id="5_rpwjt"]
[ext_resource type="Texture2D" uid="uid://cqxa2oc7cwyoe" path="res://Images/Pieces/Ruby_Square.png" id="5_v41af"]
[ext_resource type="Texture2D" uid="uid://c4i1j0w4n7t8s" path="res://Images/Pieces/Pearl_Square.png" id="6_cx6b4"]
[ext_resource type="Texture2D" uid="uid://d27gnovcisgto" path="res://Images/Pieces/Amber_Square.png" id="7_04e0q"]
[ext_resource type="Texture2D" uid="uid://cpdtfwlahnwpj" path="res://Images/Pieces/Amber_Circle-toggle.png" id="7_78xse"]
[ext_resource type="Texture2D" uid="uid://be6nbwh4vt5vn" path="res://Images/Pieces/Jade_Square.png" id="8_rhj3r"]
[ext_resource type="Texture2D" uid="uid://bgovcmnj78ims" path="res://Images/V2_Board_Only.png" id="9_fdjkt"]
[ext_resource type="Texture2D" uid="uid://c5p164mydio4s" path="res://Images/Pieces/Jade_Circle-toggle.png" id="9_h0l6c"]
[ext_resource type="Texture2D" uid="uid://c0x0ljxs5uriu" path="res://Images/Icons/Portal_Swap.png" id="9_vtqq6"]
[ext_resource type="Texture2D" uid="uid://bir4w8lhj60sb" path="res://Images/Icons/Portal_Swap_Toggle.png" id="10_lu7gx"]
[ext_resource type="Texture2D" uid="uid://b0hmdlalj2m8p" path="res://Images/Pieces/Ruby_Square-toggle.png" id="11_0nmpo"]
[ext_resource type="Texture2D" uid="uid://mmpgl0baf4q5" path="res://Images/Icons/Fireball.png" id="11_etvwt"]
[ext_resource type="Texture2D" uid="uid://b11664ej8ljl5" path="res://Images/Icons/Fireball_Toggle.png" id="12_oguqw"]
[ext_resource type="Texture2D" uid="uid://dd4hxr5mauc4o" path="res://Images/Icons/TidalWave.png" id="13_3la7a"]
[ext_resource type="Texture2D" uid="uid://ufxnlyks21wd" path="res://Images/Pieces/Pearl_Square-toggle.png" id="13_lq7dr"]
[ext_resource type="Texture2D" uid="uid://cyq5gjme8pu8m" path="res://Images/Icons/TidalWave_Toggle.png" id="14_oymgb"]
[ext_resource type="Texture2D" uid="uid://cc2k8fdt2fyuc" path="res://Images/Icons/Sap.png" id="15_jp4nh"]
[ext_resource type="Texture2D" uid="uid://xbuovyxqjxh7" path="res://Images/Pieces/Amber_Square-toggle.png" id="15_l1cpu"]
[ext_resource type="Texture2D" uid="uid://c0as66xf1tmms" path="res://Images/Icons/Sap_Toggle.png" id="16_rn627"]
[ext_resource type="Texture2D" uid="uid://qp1qlnr3xuel" path="res://Images/Pieces/Jade_Square-toggle.png" id="17_mww01"]
[ext_resource type="Texture2D" uid="uid://0kfthrudr4xk" path="res://Images/Icons/Launch.png" id="17_qvf40"]
[ext_resource type="Texture2D" uid="uid://btp7w5ug5d77l" path="res://Images/Icons/Launch_Toggle.png" id="18_em35q"]
[ext_resource type="Texture2D" uid="uid://c58usujtsmlso" path="res://Images/Icons/End_Turn.png" id="19_j4hto"]
[ext_resource type="Texture2D" uid="uid://sogupwpp3aof" path="res://Images/Misc/Gradient_yellow.png" id="21_gwgu1"]
[ext_resource type="Texture2D" uid="uid://cjo4fg8rliuaf" path="res://Images/Misc/AutoSetup.png" id="29_6kjxn"]
[ext_resource type="Texture2D" uid="uid://c78rt1mak56c" path="res://Images/Misc/symbol previous.svg" id="30_7u2a4"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_5w5l0")

[node name="Board" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -520.0
offset_right = 520.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
pivot_offset = Vector2(520, 520)
mouse_filter = 2
color = Color(0.517647, 0.517647, 0.517647, 0)

[node name="BoardBackground" type="TextureRect" parent="Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -520.0
offset_right = 520.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_fdjkt")
expand_mode = 1

[node name="BoardGrid" type="GridContainer" parent="Board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 25

[node name="Winner" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Squares" type="Label" parent="Winner"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.211765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Squares Win"
horizontal_alignment = 1

[node name="Circles" type="Label" parent="Winner"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0.211765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "Circles Win"
horizontal_alignment = 1

[node name="Controls" type="Control" parent="."]
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 1000.0
mouse_filter = 2

[node name="CirclePiecesContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 0
offset_left = 193.0
offset_top = 59.0
offset_right = 1201.0
offset_bottom = 4103.0
rotation = 0.785398
scale = Vector2(0.05, 0.05)

[node name="JadeCircle" type="TextureButton" parent="Controls/CirclePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_6lco6")
texture_pressed = ExtResource("9_h0l6c")

[node name="AmberCircle" type="TextureButton" parent="Controls/CirclePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_i42jv")
texture_pressed = ExtResource("7_78xse")

[node name="PearlCircle" type="TextureButton" parent="Controls/CirclePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_dde0g")
texture_pressed = ExtResource("5_rpwjt")

[node name="RubyCircle" type="TextureButton" parent="Controls/CirclePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_x5vtr")
texture_pressed = ExtResource("3_ovmf0")

[node name="SquarePiecesContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 2
offset_left = 58.0
offset_top = 794.0
offset_right = 1066.0
offset_bottom = 4838.0
rotation = -0.785398
scale = Vector2(0.05, 0.05)

[node name="RubySquare" type="TextureButton" parent="Controls/SquarePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_v41af")
texture_pressed = ExtResource("11_0nmpo")

[node name="PearlSquare" type="TextureButton" parent="Controls/SquarePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_cx6b4")
texture_pressed = ExtResource("13_lq7dr")

[node name="AmberSquare" type="TextureButton" parent="Controls/SquarePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_04e0q")
texture_pressed = ExtResource("15_l1cpu")

[node name="JadeSquare" type="TextureButton" parent="Controls/SquarePiecesContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("8_rhj3r")
texture_pressed = ExtResource("17_mww01")

[node name="PortalSwap" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 885.0
offset_top = 862.0
offset_right = 990.0
offset_bottom = 967.0
scale = Vector2(0.75, 0.75)
toggle_mode = true
texture_normal = ExtResource("9_vtqq6")
texture_pressed = ExtResource("10_lu7gx")

[node name="Fireball" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 682.0
offset_top = 890.0
offset_right = 782.0
offset_bottom = 990.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("11_etvwt")
texture_pressed = ExtResource("12_oguqw")

[node name="TidalWave" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 769.0
offset_top = 835.0
offset_right = 869.0
offset_bottom = 935.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("13_3la7a")
texture_pressed = ExtResource("14_oymgb")

[node name="Sap" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 836.0
offset_top = 758.0
offset_right = 936.0
offset_bottom = 858.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("15_jp4nh")
texture_pressed = ExtResource("16_rn627")

[node name="Launch" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 898.0
offset_top = 671.0
offset_right = 998.0
offset_bottom = 771.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("17_qvf40")
texture_pressed = ExtResource("18_em35q")

[node name="End_Turn" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 868.0
offset_top = 54.0
offset_right = 968.0
offset_bottom = 154.0
texture_normal = ExtResource("19_j4hto")

[node name="AutoSetup" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 868.0
offset_top = 185.0
offset_right = 968.0
offset_bottom = 217.0
toggle_mode = true
texture_normal = ExtResource("29_6kjxn")

[node name="ResetTurn" type="TextureButton" parent="Controls"]
layout_mode = 0
offset_left = 17.0
offset_top = 45.0
offset_right = 225.0
offset_bottom = 165.0
scale = Vector2(0.5, 0.5)
toggle_mode = true
texture_normal = ExtResource("30_7u2a4")

[node name="CirclesTurn" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -520.0
offset_right = 520.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("21_gwgu1")

[node name="SquaresTurn" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -520.0
offset_top = -40.0
offset_right = 520.0
grow_horizontal = 2
grow_vertical = 0
rotation = 3.14159
pivot_offset = Vector2(520, 20)
texture = ExtResource("21_gwgu1")

[connection signal="toggled" from="Controls/CirclePiecesContainer/JadeCircle" to="." method="_on_jade_circle_toggled"]
[connection signal="toggled" from="Controls/CirclePiecesContainer/AmberCircle" to="." method="_on_amber_circle_toggled"]
[connection signal="toggled" from="Controls/CirclePiecesContainer/PearlCircle" to="." method="_on_pearl_circle_toggled"]
[connection signal="toggled" from="Controls/CirclePiecesContainer/RubyCircle" to="." method="_on_ruby_circle_toggled"]
[connection signal="toggled" from="Controls/SquarePiecesContainer/RubySquare" to="." method="_on_ruby_square_toggled"]
[connection signal="toggled" from="Controls/SquarePiecesContainer/PearlSquare" to="." method="_on_pearl_square_toggled"]
[connection signal="toggled" from="Controls/SquarePiecesContainer/AmberSquare" to="." method="_on_amber_square_toggled"]
[connection signal="toggled" from="Controls/SquarePiecesContainer/JadeSquare" to="." method="_on_jade_square_toggled"]
[connection signal="toggled" from="Controls/PortalSwap" to="." method="_on_portal_swap_toggled"]
[connection signal="toggled" from="Controls/Fireball" to="." method="_on_fireball_toggled"]
[connection signal="toggled" from="Controls/TidalWave" to="." method="_on_tidal_wave_toggled"]
[connection signal="toggled" from="Controls/Sap" to="." method="_on_sap_toggled"]
[connection signal="toggled" from="Controls/Launch" to="." method="_on_launch_toggled"]
[connection signal="pressed" from="Controls/End_Turn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Controls/AutoSetup" to="." method="_on_auto_setup_pressed"]
[connection signal="toggled" from="Controls/AutoSetup" to="." method="_on_auto_setup_toggled"]
[connection signal="pressed" from="Controls/ResetTurn" to="." method="_on_reset_turn_pressed"]
